Added content about how to pack for a trip

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 	<title>Assignment 2.5</title>
 </head>
 <body>
+<img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjLrJnbhr_LAhVE2WMKHVGmBTQQjRwIBw&url=http%3A%2F%2Fwww.buytravelbackpacks.com%2Fchoose-a-backpack%2F&bvm=bv.116636494,d.cGc&psig=AFQjCNE7XXbpU1VZsjW3GS_SG0scA-x3Ig&ust=1458006249750769">
+
+<h1>Building your baggage: A beginners guide to packing.</h1>
+
+<p>It's not always easy getting ready to go on vacation. Even more so when your vacation turns in to a 6 month adventure backpacking in a foriegn country. Expect anything and everything to go wrong and to make what you got work for you. If you are anything like me and wait till the last second before boarding the plane, you may forget the most important things for your trip like socks and clean underwear or in my case, your <strong>PASSPORT!</strong></p>
+
+
+#hat type of bag should I get? How do I fit all my stuff? What are the best places to visit for beginners? Should I go alone or with a group? Where should I sleep? What do I pack? How will I communicate with the localsl? How do I get there? How much money do I need per day? As you can see the list goes on. Luckily there have been many before us who have set out on foot to see the world and have offered up advise to those who are willing to take it.
 
 </body>
 </html>
