--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <p>It's not always easy getting ready to go on vacation. Even more so when your vacation turns in to a 6 month adventure backpacking in a foriegn country. Expect anything and everything to go wrong and to make what you got work for you. If you are anything like me and wait till the last second before boarding the plane, you may forget the most important things for your trip like socks and clean underwear or in my case, your <strong>PASSPORT!</strong></p>
 
-<h2>Below are the main groups that I use to to categorize my list</h2>
+<h2><u>Step 1:</u> Categorize your list</h2>
 <ul>
 <li>Clothing</li>
 <li>Documents/Money/Travel info</li>
