added checklist for clothing

--- a/index.html
+++ b/index.html
@@ -11,14 +11,53 @@
 
 <p>It's not always easy getting ready to go on vacation. Even more so when your vacation turns in to a 6 month adventure backpacking in a foriegn country. Expect anything and everything to go wrong and to make what you got work for you. If you are anything like me and wait till the last second before boarding the plane, you may forget the most important things for your trip like socks and clean underwear or in my case, your <strong>PASSPORT!</strong></p>
 
-<h2><u>Step 1:</u> Categorize your list</h2>
-<ul>
-<li>Clothing</li>
-<li>Documents/Money/Travel info</li>
-<li>Toiletries</li>
-<li>Electronics</li>
-<li>other</li>
-</ul>
+<h2><u>Step 1:</u> Categorize my lists</h2>
+	<ul>
+		<li>Clothing</li>
+		<li>Documents/Money/Travel info</li>
+		<li>Toiletries</li>
+		<li>Electronics</li>
+		<li>other</li>
+	</ul>
 
+<h2><u>Step 2:</u> Check the boxes</h2>
+
+<fieldset>
+  <p>
+	<label>
+		<input type="checkbox" name="" value=""> Jacket
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="" value=""> Shirts
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="" value=""> Shorts
+	</label>
+  </p>
+  <p>	
+	<label>
+		<input type="checkbox" name="" value=""> Pants
+	</label>
+  </p>
+  <p>		
+	<label>
+		<input type="checkbox" name="" value=""> Socks
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="" value=""> Underwear
+	</label>
+  </p>
+  <p>
+  <label>
+		<input type="checkbox" name="" value=""> Shoes
+	</label>
+  </p>
+</fieldset>	
 </body>
 </html>
