--- a/index.html
+++ b/index.html
@@ -22,40 +22,173 @@
 
 <h2><u>Step 2:</u> Check the boxes</h2>
 
+<p> By using the checklists below you can be sure to always have the essentials!</p>
+<center><h2>Clothing</h2></center>
 <fieldset>
   <p>
 	<label>
-		<input type="checkbox" name="" value=""> Jacket
+		<input type="checkbox" name="item" value="Jacket"> Jacket
 	</label>
   </p>
   <p>
 	<label>
-		<input type="checkbox" name="" value=""> Shirts
+		<input type="checkbox" name="item" value="Shirts"> Shirts
 	</label>
   </p>
   <p>
 	<label>
-		<input type="checkbox" name="" value=""> Shorts
+		<input type="checkbox" name="item" value="Shorts"> Shorts
 	</label>
   </p>
   <p>	
 	<label>
-		<input type="checkbox" name="" value=""> Pants
+		<input type="checkbox" name="item" value="Pants"> Pants
 	</label>
   </p>
   <p>		
 	<label>
-		<input type="checkbox" name="" value=""> Socks
+		<input type="checkbox" name="item" value="Socks"> Socks
 	</label>
   </p>
   <p>
 	<label>
-		<input type="checkbox" name="" value=""> Underwear
+		<input type="checkbox" name="item" value="Underwear"> Underwear
 	</label>
   </p>
   <p>
   <label>
-		<input type="checkbox" name="" value=""> Shoes
+		<input type="checkbox" name="item" value="Shoes"> Shoes
+	</label>
+  </p>
+</fieldset>	
+
+<center><h2>Documents/Money/Travel Info</h2></center>
+<fieldset>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Passport"> Passport
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Plane Ticket"> Plane Ticket
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Visa"> Visa(s)
+	</label>
+  </p>
+  <p>	
+	<label>
+		<input type="checkbox" name="item" value="Itinerary"> Travel Itinerary
+	</label>
+  </p>
+  <p>		
+	<label>
+		<input type="checkbox" name="item" value="Addresses"> Hotel/Hostel Address
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Money"> Currency of foreign country
+	</label>
+  </p>
+</fieldset>	
+
+<center><h2>Toiletries</h2></center>
+<fieldset>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Toothbrush"> Toothbrush
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Toothpaste"> Toothpaste
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Floss"> Floss
+	</label>
+  </p>
+  <p>	
+	<label>
+		<input type="checkbox" name="item" value="Contacts"> Contacts/Glasses
+	</label>
+  </p>
+  <p>		
+	<label>
+		<input type="checkbox" name="item" value="Razor"> Shaver
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Shampoo"> Shampoo and Conditioner 
+	</label>
+  </p>
+   <p>
+	<label>
+		<input type="checkbox" name="item" value="Soap"> Soap 
+	</label>
+  </p>
+</fieldset>	
+
+<center><h2>Electronis</h2></center>
+<fieldset>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Laptop"> Laptop
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Phone"> Phone
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Camera"> Camera
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Converter"> Universal outlet
+	</label>
+  </p>
+</fieldset>	
+
+<center><h2>Other</h2></center>
+<fieldset>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Flashlight"> Headlamp
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="First Aid"> First Aid Kit
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Lock"> Small Lock 
+	</label>
+  </p>
+  <p>	
+	<label>
+		<input type="checkbox" name="item" value="Book"> Reading Book
+	</label>
+  </p>
+  <p>		
+	<label>
+		<input type="checkbox" name="item" value="Diary"> Diary
+	</label>
+  </p>
+  <p>
+	<label>
+		<input type="checkbox" name="item" value="Food"> Snacks 
 	</label>
   </p>
 </fieldset>	
