updated typos and added step 3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <p>It's not always easy getting ready to go on vacation. Even more so when your vacation turns in to a 6 month adventure backpacking in a foriegn country. Expect anything and everything to go wrong and to make what you got work for you. If you are anything like me and wait till the last second before boarding the plane, you may forget the most important things for your trip like socks and clean underwear or in my case, your <strong>PASSPORT!</strong></p>
 
-<h2><u>Step 1:</u> Categorize my lists</h2>
+<h2><u>Step 1:</u> Categorize the lists</h2>
 	<ul>
 		<li>Clothing</li>
 		<li>Documents/Money/Travel info</li>
@@ -135,7 +135,7 @@
   </p>
 </fieldset>	
 
-<center><h2>Electronis</h2></center>
+<center><h2>Electronics</h2></center>
 <fieldset>
   <p>
 	<label>
@@ -192,5 +192,14 @@
 	</label>
   </p>
 </fieldset>	
+
+<h2><u>Step 3:</u> Fitting it all in</h2>
+<p>Here are some tips and tricks to help you save some room.</p>
+<ul>
+	<li>Roll your clothes</li>
+	<li>Pack only what you need. LIfe on the road isnt a fashion show. Think minimal. If you want, pack one or two nice outfits for going out.</li>
+	<li>For the mother load of all tips and tricks click <a href="http://www.buzzfeed.com/ariellecalderon/summer-travel-hacks#.nsD7l52mv" target="_blank">here</a></li>
+</ul>
+
 </body>
 </html>
