moved checklist from home page to its own page

--- a/checklist.html
+++ b/checklist.html
@@ -174,5 +174,8 @@ center><h2>Clothing</h2></center>
 	</label>
   </p>
 </fieldset>	
+<footer>
+	<p> <a href="index.html"> Home page</a></p>
+</footer>
 </body>
 </html>
