relinked the checklist to checklist page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
 <center><img src="backpack_essential.jpg" alt="backpack" height="330" width="520" /></center>
 
+<div>
 <p>It's not always easy getting ready to go on vacation. Even more so when your vacation turns in to a 6 month adventure backpacking in a foriegn country. Expect anything and everything to go wrong and to make what you got work for you. If you are anything like me and wait till the last second before boarding the plane, you may forget the most important things for your trip like socks and clean underwear or in my case, your <strong>PASSPORT!</strong></p>
+</div>
 
+<div>
 <h2><u>Step 1:</u> Categorize the lists</h2>
 	<ul>
 		<li>Clothing</li>
@@ -19,11 +22,13 @@
 		<li>Electronics</li>
 		<li>other</li>
 	</ul>
+</div>
 
+<div>
 <h2><u>Step 2:</u> Check the boxes</h2>
 
-<p> By using the <nav> <a href="checklist.html">checklists</a> you can be sure to always have the essentials! Once you're done, head back to this page for more info.</p>
-
+<p> By using this <a href="checklist.html">checklists</a> you can be sure to always have the essentials! Once you're done, head back to this page for more info.</p>
+</div>
 
 <h2><u>Step 3:</u> Fitting it all in</h2>
 <p>Here are some tips and tricks to help you save some room.</p>
