added table for all essentials

--- a/index.html
+++ b/index.html
@@ -14,14 +14,65 @@
 </div>
 
 <div>
-<h2><u>Step 1:</u> Categorize the lists</h2>
-	<ul>
-		<li>Clothing</li>
-		<li>Documents/Money/Travel info</li>
-		<li>Toiletries</li>
-		<li>Electronics</li>
-		<li>other</li>
-	</ul>
+<h2><u>Step 1:</u> Categorize the essentials</h2>
+<table border =1>
+	<tr>
+		<th>Clothing</th>
+		<th>Documents/Money/Travel info</th>
+		<th>Toiletries</th>
+		<th>Electronics</th>
+		<th>Other</th>
+	</tr>
+	<tr>
+		<td>Jacket/Sweater</td>
+		<td>Passport</td>
+		<td>Toothbrush</td>
+		<td>Laptop</td>
+		<td>Headlamp</td>
+	</tr>
+	<tr>
+		<td>Shirts</td>
+		<td>Plane ticket</td>
+		<td>Toothpaste</td>
+		<td>Travel Itinerary</td>
+		<td>Phone</td>
+	</tr>
+	<tr>
+		<td>Shorts</td>
+		<td>Visa(s)</td>
+		<td>Floss</td>
+		<td>Contacts/Glasses</td>
+		<td>Camera</td>
+	</tr>
+	<tr>
+		<td>Pants</td>
+		<td>Travel Itinerary</td>
+		<td>Contacts/Glasses</td>
+		<td>Universal outlet</td>
+		<td>Reading Book</td>
+	</tr>
+	<tr>
+		<td>Socks</td>
+		<td>Hotel/Hostel Address</td>
+		<td>Shaver</td>
+		<td>Universal outlet</td>
+		<td>Diary</td>
+	</tr>
+	<tr>
+		<td>Underwear</td>
+		<td>Currency</td>
+		<td>Shampoo/Conditioner</td>
+		<td>Universal outlet</td>
+		<td>Snacks</td>
+	</tr>
+	<tr>
+		<td>Shoes</td>
+		<td>&nbsp;</td>
+		<td>Soap</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+</table>
 </div>
 
 <div>
