--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <p>Here are some tips and tricks to help you save some room.</p>
 <ul>
 	<li>Roll your clothes</li>
-	<li>Pack only what you need. LIfe on the road isnt a fashion show. Think minimal. If you want, pack one or two nice outfits for going out.</li>
+	<li>Pack only what you need. Life on the road isn't a fashion show. Think minimal. If you want, pack one or two nice outfits for going out.</li>
 	<li>For the mother load of all tips and tricks click <a href="http://www.buzzfeed.com/ariellecalderon/summer-travel-hacks#.nsD7l52mv" target="_blank">here</a></li>
 </ul>
 
