--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 		<td>Socks</td>
 		<td>Hotel/Hostel Address</td>
 		<td>Shaver</td>
-		<td>Universal outlet</td>
+		<td>&nbsp;</td>
 		<td>Diary</td>
 	</tr>
 	<tr>
 		<td>Underwear</td>
 		<td>Currency</td>
 		<td>Shampoo/Conditioner</td>
-		<td>Universal outlet</td>
+		<td>&nbsp;</td>
 		<td>Snacks</td>
 	</tr>
 	<tr>
