added margins and padding to fieldsets

--- a/checklist.html
+++ b/checklist.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<center><h2>Clothing</h2></center>
+<h2>Clothing</h2>
 <fieldset>
   <p>
 	<label>
@@ -45,7 +45,7 @@
   </p>
 </fieldset>	
 
-<center><h2>Documents/Money/Travel Info</h2></center>
+<h2>Documents/Money/Travel Info</h2>
 <fieldset>
   <p>
 	<label>
@@ -79,7 +79,7 @@
   </p>
 </fieldset>	
 
-<center><h2>Toiletries</h2></center>
+<h2>Toiletries</h2>
 <fieldset>
   <p>
 	<label>
@@ -118,7 +118,7 @@
   </p>
 </fieldset>	
 
-<center><h2>Electronics</h2></center>
+<h2>Electronics</h2>
 <fieldset>
   <p>
 	<label>
@@ -142,7 +142,7 @@
   </p>
 </fieldset>	
 
-<center><h2>Other</h2></center>
+<h2>Other</h2>
 <fieldset>
   <p>
 	<label>
