input class boxes on div tags

--- a/checklist.html
+++ b/checklist.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<div class ="boxes">
 <h2>Clothing</h2>
 <fieldset>
   <p>
@@ -44,7 +45,9 @@
 	</label>
   </p>
 </fieldset>	
+</div>
 
+<div class ="boxes">
 <h2>Documents/Money/Travel Info</h2>
 <fieldset>
   <p>
@@ -78,7 +81,9 @@
 	</label>
   </p>
 </fieldset>	
+</div>
 
+<div class ="boxes">
 <h2>Toiletries</h2>
 <fieldset>
   <p>
@@ -118,6 +123,7 @@
   </p>
 </fieldset>	
 
+<div class ="boxes">
 <h2>Electronics</h2>
 <fieldset>
   <p>
@@ -141,7 +147,9 @@
 	</label>
   </p>
 </fieldset>	
+</div>
 
+<div class ="boxes">
 <h2>Other</h2>
 <fieldset>
   <p>
@@ -175,6 +183,8 @@
 	</label>
   </p>
 </fieldset>	
+</div>
+
 <footer>
 	<p> <a href="index.html"> Home page</a></p>
 </footer>
