--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Assignment 2.5</title>
-	<link rel="stylesheet" href="style.css" type="text/css">
+	<link rel="stylesheet" href="style2.css" type="text/css">
 </head>
 <body>
 
@@ -19,7 +19,7 @@
 <p>It's not always easy getting ready to go on vacation. Even more so when your vacation turns in to a 6 month adventure backpacking in a foriegn country. Expect anything and everything to go wrong and to make what you got work for you. If you are anything like me and wait till the last second before boarding the plane, you may forget the most important things for your trip like socks and clean underwear or in my case, your <strong>PASSPORT!</strong> To avoid such headaches follow the steps below.</p>
 </div>
 
-<div>
+<div class="steps">
 <h2><u>Step 1:</u> Categorize the essentials</h2>
 <table border =1>
 	<tr>
@@ -81,12 +81,13 @@
 </table>
 </div>
 
-<div>
+<div class="steps">
 <h2><u>Step 2:</u> Check the boxes</h2>
 
 <p> By using this <a href="checklist.html">checklists</a> you can be sure to always have the essentials! Once you're done, head back to this page for more info.</p>
 </div>
 
+<div class="steps">
 <h2><u>Step 3:</u> Fitting it all in</h2>
 <p>Here are some tips and tricks to help you save some room.</p>
 <ul>
@@ -94,6 +95,7 @@
 	<li>Pack only what you need. Life on the road isn't a fashion show. Think minimal. If you want, pack one or two nice outfits for going out.</li>
 	<li>For the mother load of all tips and tricks click <a href="http://www.buzzfeed.com/ariellecalderon/summer-travel-hacks#.nsD7l52mv" target="_blank">here</a></li>
 </ul>
+</div>
 
 </body>
 </html>
