added media tags

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <h1>Building your baggage: A beginners guide to packing for the long haul</h1>
 
 <p>
-<a data-flickr-embed="true"  href="https://www.flickr.com/photos/zip0082/6425623495/" title="2 month travel gear (with 42L backpack)"><img src="https://farm8.staticflickr.com/7001/6425623495_44d5885e37_z.jpg" width="640" height="425" alt="2 month travel gear (with 42L backpack)"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script></p>
-<p><i><a href="https://creativecommons.org/licenses/by-nc/2.0/">Here</a> is the link to the photo license. Thank you Andrew Nicholas for the image! This is your <a href="https://www.flickr.com/photos/zip0082/6425623495/in/photolist-aMNZZZ-dbME6L-dNvSaz-mYJ1K-9eyisg-pcuFvC-gj1WUq-hvw3vo-eJ4mxk-fpr9gw-fpbTNt-aj2D3q-daxz8h-cshfLA-cT4Uu7-azwx1D-gcckwa-qaHSdK-6F68vh-nfyXfb-fWX4kW-dawWQT-4dkDDo-9veVtE-kjqbRM-eWZXZN-oSE9Zw-Vi3qT-oS5H2L-db1rmf-dd5YSq-6H5Uoz-dadHaf-7NKuiD-daiFCr-fpr9w1-e1rCVd-mMHA3S-kN2LVf-eVyEPq-nyfwHF-daVYUf-eWZY3o-5r5u7j-oRM4GN-fAHwEd-fx6TRR-oQvt5N-daEZNS-dQuL4b">photo</a>!</i>
+<img class="displayed" src="https://farm8.staticflickr.com/7001/6425623495_44d5885e37_z.jpg" width="640" height="425" alt="2 month travel gear (with 42L backpack)"></p>
+
+<p id="photo"><i><a href="https://creativecommons.org/licenses/by-nc/2.0/">Here</a> is the link to the photo license. Thank you Andrew Nicholas for the image! This is your <a href="https://www.flickr.com/photos/zip0082/6425623495/in/photolist-aMNZZZ-dbME6L-dNvSaz-mYJ1K-9eyisg-pcuFvC-gj1WUq-hvw3vo-eJ4mxk-fpr9gw-fpbTNt-aj2D3q-daxz8h-cshfLA-cT4Uu7-azwx1D-gcckwa-qaHSdK-6F68vh-nfyXfb-fWX4kW-dawWQT-4dkDDo-9veVtE-kjqbRM-eWZXZN-oSE9Zw-Vi3qT-oS5H2L-db1rmf-dd5YSq-6H5Uoz-dadHaf-7NKuiD-daiFCr-fpr9w1-e1rCVd-mMHA3S-kN2LVf-eVyEPq-nyfwHF-daVYUf-eWZY3o-5r5u7j-oRM4GN-fAHwEd-fx6TRR-oQvt5N-daEZNS-dQuL4b">photo</a>!</i>
 </p>
 
-<div>
+<div id="intro">
 <h2>Lets be real</h2>
 
 <p>It's not always easy getting ready to go on vacation. Even more so when your vacation turns in to a 6 month adventure backpacking in a foriegn country. Expect anything and everything to go wrong and to make what you got work for you. If you are anything like me and wait till the last second before boarding the plane, you may forget the most important things for your trip like socks and clean underwear or in my case, your <strong>PASSPORT!</strong> To avoid such headaches follow the steps below.</p>
