added class to step 2 element

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </div>
 
 <div class="steps">
-<h2><u>Step 2:</u> Check the boxes</h2>
+<h2><u class="check">Step 2:</u> Check the boxes</h2>
 
 <p> By using this <a href="checklist.html">checklists</a> you can be sure to always have the essentials! Once you're done, head back to this page for more info.</p>
 </div>
